<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertNhanVienActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:orientation="vertical"
        tools:targetApi="o">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_vpp_title"
            android:textSize="30sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/mavpp_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:background="@drawable/border_black_rectangle_radius_no_focus"
            android:hint="@string/mavpp_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tenvpp_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:background="@drawable/border_black_rectangle_radius_no_focus"
            android:hint="@string/tenvpp_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dvt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:background="@drawable/border_black_rectangle_radius_no_focus"
            android:hint="@string/dvt_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/gianhap_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:background="@drawable/border_black_rectangle_radius_no_focus"
            android:hint="@string/gianhap_title"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hinh_title"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/hinh_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_image_120"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/back_btn"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/insert_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_btn"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>