<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertNhanVienActivity"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_phongban_title"
        android:textSize="30sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/mapb_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:background="@drawable/border_black_rectangle_radius_no_focus"
        android:hint="@string/mapb_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tenpb_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:background="@drawable/border_black_rectangle_radius_no_focus"
        android:hint="@string/tenpb_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/back_btn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/insert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_btn"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>